# nanoservices-utils

./: .gitignore  Cargo.toml  README.md
crates/api-code-gen/: Cargo.toml
crates/api-code-gen/src/: lib.rs  typescript_gen.rs
crates/dal-tx-impl/: Cargo.toml  README.md
crates/dal-tx-impl/src/: lib.rs
crates/event-subscriber/: Cargo.toml  README.md
crates/event-subscriber/src/: lib.rs
crates/publish-event/: Cargo.toml  README.md
crates/publish-event/src/: lib.rs
crates/webschema/: Cargo.toml
crates/webschema/src/: lib.rs
nanoservices-utils/: Cargo.toml  README.md
nanoservices-utils/src/: errors.rs  jwt.rs  lib.rs  tokio_pub_sub.rs
nanoservices-utils/src/code_gen/: configure_paths.rs  mod.rs  schema_gen.rs
nanoservices-utils/src/data_access/: define_transactions.rs  mod.rs  sqlx_postgres.rs
nanoservices-utils/src/networking/: contract.rs  mod.rs  utils.rs
nanoservices-utils/src/networking/serialization/: bit_codec.rs  codec.rs  mod.rs  version_codec.rs  version_testing.rs
nanoservices-utils/src/networking/serialization/wrappers/: bincode.rs  bitcode.rs  mod.rs  traits.rs
nanoservices-utils/src/networking/tcp/: client.rs  mod.rs  routing.rs  wasm_proxy.rs
nanoservices-utils/src/networking/wasm/: routing.rs
scripts/: run_tests.sh
src/: config.rs  errors.rs  lib.rs
src/networking/: bit_codec.rs  contract.rs  mod.rs  tcp_message.rs  tcp_routing.rs
src/networking/serialization/: codec.rs
src/networking/tcp/: client.rs  routing.rs  wasm_proxy.rs
src/networking/wasm/: mod.rs  routing.rs
tests/wasm/client/: Cargo.toml
tests/wasm/client/src/: main.rs
tests/wasm/kernel/: Cargo.toml
tests/wasm/kernel/src/: lib.rs
tests/wasm/tcp_proxy/: Cargo.toml
tests/wasm/tcp_proxy/src/: main.rs
tests/wasm/wasi-server/: Cargo.toml  new.txt  wasi-server.wasm
tests/wasm/wasi-server/scripts/: build.sh
tests/wasm/wasi-server/src/: lib.rs  main.rs
