[package]
name = "nanoservices-utils"
version = "0.1.0"
edition = "2021"
authors = ["Maxwell Flitton", "Caroline Morton"]
description = "A collection of utilities for nanoservices"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
chrono = { version = "0.4.37", features = ["serde"] }
futures = "0.3.30"
serde_json = "1.0.115"
jsonwebtoken = "9.3.0"

# below is for networking
tokio = { version = "1.37.0", features = ["full"] }
bitcode = "0.6.0"
bincode = "1.3.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.6.0"

[features]
actix = ["actix-web"]
