
[package]
name = "nanoservices-utils"
version = "0.1.1"
edition = "2021"
authors = ["Maxwell Flitton", "Caroline Morton"]
description = "A collection of utilities for nanoservices"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
chrono = { version = "0.4.37", features = ["serde"] }
futures = "0.3.30"
serde_json = "1.0.115"
jsonwebtoken = { version = "9.3.0", optional = true }

# below is for messaging serialization
bitcode = { version = "0.6.0", optional = true }
bincode = { version = "1.3.3", optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
bytes = { version = "1.6.0", optional = true }

# below is for TCP messaging
# tcp-tokio = { version = "1.37.0", features = ["full"], optional = true, package = "tokio" }
tokio = { version = "1.37.0", features = ["full"] }

# below is for WASM messaging
# wasm-tokio = { version = "1.37.0", features = ["sync", "macros", "io-util", "rt", "time"], optional = true, package = "tokio" }
# wasm-bindgen = { versoin = "0.2.92", optional = true }

[features]
actix = ["actix-web"]
networking = ["bitcode", "bincode", "tokio-util", "bytes"]
tcp-messaging = ["tokio/full", "networking"]
wasm-messaging = ["tokio/sync", "tokio/macros", "tokio/io-util", "tokio/rt", "tokio/time", "networking"]
# wasm-messaging = ["wasm-tokio", "networking"]
# tcp-messaging = ["tcp-tokio", "networking"]
jwt = ["jsonwebtoken"]
